# notes

./: Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: database.py  main.py  pre_start.py  start.sh
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  user.py
