[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["ArnoldoRicardo <anyback@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.32"
alembic = "^1.7.7"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
